@@ -1,3 +1,7 @@
+2012-01-13  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Disable symbol versions on MacOSX.  Patch by Anatol Pomozov
+
 2012-01-02  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Remove unnecessary mutex unlock at the end of multithreaded
